--- a/index.html
+++ b/index.html
@@ -461,18 +461,26 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <p><img src="Z.png" width="900px" /></p>
 </section>
 <section id="statistics-1" class="slide level2">
-<h2>Statistics</h2>
-<p><img src="chair.jpeg" width="600px" /></p>
+<h2>Statistics?</h2>
+<p><img src="zscore.png" width="600px" /></p>
+</section>
+<section id="ending-a-conversation-with-statistics" class="slide level2">
+<h2>Ending a Conversation (with Statistics)</h2>
+<p><img src="chair.png" width="600px" /></p>
 </section>
 <section id="statistics-2" class="slide level2">
 <h2>Statistics?</h2>
 <p><img src="Z2.png" width="900px" /></p>
 </section>
 <section id="statistics-3" class="slide level2">
+<h2>Statistics?</h2>
+<p><img src="zscore2.png" width="600px" /></p>
+</section>
+<section id="statistics-4" class="slide level2">
 <h2>Statistics</h2>
 <p>“The best thing about being a statistician is that you get to play in everyone’s backyard.” - John Tukey <img src="Golden-Eagle.png" width="600px" /></p>
 </section>
-<section id="statistics-4" class="slide level2">
+<section id="statistics-5" class="slide level2">
 <h2>Statistics</h2>
 <p><img src="field.png" width="800px" /></p>
 </section>
@@ -620,7 +628,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <ul>
 <li class="fragment"><p>Step Length: is a distribution for distance traveled in a specific period</p></li>
 <li class="fragment"><p>Angular Direction:<br />
-<img src="index_files/figure-revealjs/unnamed-chunk-25-1.png" width="400px" /></p></li>
+<img src="index_files/figure-revealjs/unnamed-chunk-27-1.png" width="400px" /></p></li>
 </ul>
 </section>
 <section id="step-length-and-angular-direction-1" class="slide level2">
